# tales

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  app.js  docs.html  index.html
.claude/: launch.json
.claude/commands/: tales.md
codex/prompts/: tales.md
crates/tales-cli/: Cargo.toml
crates/tales-cli/src/: main.rs
crates/tales-core/: Cargo.toml  build.rs
crates/tales-core/src/: blackboard.rs  build_info.rs  bus.rs  conductor.rs  coordinator.rs  dataset.rs  error.rs  eval_harness.rs  event.rs  lib.rs  llm_conductor.rs  orchestrator.rs  project_context.rs  prompt_forecast.rs  recommend.rs  session.rs  supervisor.rs  tool_recommendation.rs  trace.rs  verify.rs  workspace_profile.rs  worktree.rs
crates/tales-core/src/agent/: claude.rs  codex.rs  generic.rs  mock.rs  mod.rs  opencode.rs
crates/tales-core/tests/: discussion.rs  gate.rs  interactive.rs  parallel.rs  tiered.rs  worktree.rs
crates/tales-tui/: Cargo.toml
crates/tales-tui/src/: app.rs  connect.rs  input.rs  main.rs  prompt.rs  terminal_app.rs  theme.rs
crates/tales-web/: Cargo.toml
crates/tales-web/src/: index.html  main.rs
docs/: tales-fugu-roadmap.md  tales-reliability-plan.md
landing/: app.js  docs.html  index.html  style.css
scripts/: release-check.ps1  release-check.sh  tales.command  ws_client.py
skill/tales/: SKILL.md
training/: CONDUCTOR_PLAN_SYSTEM.candidate.txt  GUARD-FINDINGS.md  Modelfile.conductor-ft  Modelfile.orch  Modelfile.orch3  Modelfile.orchv5  README.md  eval_llm_conductor.py  eval_plan.py  game_dev_corpus.json  hard_corpus.json  plan_guard.py  prompt-rationale.md  requirements.txt  train_conductor.py
video/: .gitignore  package-lock.json  package.json
video/src/: Composition.tsx  Root.tsx  theme.ts
