[workspace]
resolver = "2"
members = ["crates/tales-core", "crates/tales-cli", "crates/tales-tui", "crates/tales-web"]

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "MIT"

# Lightweight release builds: optimize for size, strip symbols, fat LTO.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
