[package]
name = "tales-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ratatui terminal frontend for the Tales orchestration core."

[[bin]]
name = "tales-tui"
path = "src/main.rs"

[dependencies]
tales-core = { path = "../tales-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
serde_json = "1"
