[package]
name = "tales-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tales web supervision UI — watch and steer Claude & Codex from your browser."

[[bin]]
name = "tales-web"
path = "src/main.rs"

[dependencies]
tales-core = { path = "../tales-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
serde_json = "1"
clap = { workspace = true }
uuid = { workspace = true }
